@@ -622,26 +622,36 @@ ia64_memory_insert_breakpoint (struct gdbarch *gdbarch,
 
   addr &= ~0x0f;
 
-  /* Disable the automatic memory restoration from breakpoints while
-     we read our instruction bundle.  Otherwise, the general restoration
-     mechanism kicks in and we would possibly remove parts of the adjacent
+  /* Enable the automatic memory restoration from breakpoints while
+     we read our instruction bundle for the purpose of SHADOW_CONTENTS.
+     Otherwise, we could possibly store into the shadow parts of the adjacent
      placed breakpoints.  It is due to our SHADOW_CONTENTS overlapping the real
      breakpoint instruction bits region.  */
-  cleanup = make_show_memory_breakpoints_cleanup (1);
+  cleanup = make_show_memory_breakpoints_cleanup (0);
   val = target_read_memory (addr, bundle, BUNDLE_LEN);
+
+  /* Slot number 2 may skip at most 2 bytes at the beginning.  */
+  bp_tgt->shadow_len = BUNDLE_LEN - 2;
+
+  /* Store the whole bundle, except for the initial skipped bytes by the slot
+     number interpreted as bytes offset in PLACED_ADDRESS.  */
+  memcpy (bp_tgt->shadow_contents, bundle + slotnum, bp_tgt->shadow_len);
+
+  /* Re-read the same bundle as above except that, this time, read it in order
+     to compute the new bundle inside which we will be inserting the
+     breakpoint.  Therefore, disable the automatic memory restoration from
+     breakpoints while we read our instruction bundle.  Otherwise, the general
+     restoration mechanism kicks in and we would possibly remove parts of the
+     adjacent placed breakpoints.  It is due to our SHADOW_CONTENTS overlapping
+     the real breakpoint instruction bits region.  */
+  make_show_memory_breakpoints_cleanup (1);
+  val |= target_read_memory (addr, bundle, BUNDLE_LEN);
 
   /* Check for L type instruction in slot 1, if present then bump up the slot
      number to the slot 2.  */
   template = extract_bit_field (bundle, 0, 5);
   if (slotnum == 1 && template_encoding_table[template][slotnum] == L)
     slotnum = 2;
-
-  /* Slot number 2 may skip at most 2 bytes at the beginning.  */
-  bp_tgt->placed_size = bp_tgt->shadow_len = BUNDLE_LEN - 2;
-
-  /* Store the whole bundle, except for the initial skipped bytes by the slot
-     number interpreted as bytes offset in PLACED_ADDRESS.  */
-  memcpy (bp_tgt->shadow_contents, bundle + slotnum, bp_tgt->shadow_len);
 
   /* Breakpoints already present in the code will get deteacted and not get
      reinserted by bp_loc_is_permanent.  Multiple breakpoints at the same
@@ -653,6 +663,8 @@ ia64_memory_insert_breakpoint (struct gdbarch *gdbarch,
 		    _("Address %s already contains a breakpoint."),
 		    paddress (gdbarch, bp_tgt->placed_address));
   replace_slotN_contents (bundle, IA64_BREAKPOINT, slotnum);
+
+  bp_tgt->placed_size = bp_tgt->shadow_len;
 
   if (val == 0)
     val = target_write_memory (addr + slotnum, bundle + slotnum,
