@@ -1,3 +1,10 @@
+2009-09-08  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* gdb.base/breakpoint-shadow.exp (Second breakpoint placed): Initialize
+	$bpt2address.
+	(Second breakpoint address is valid on ia64)
+	(Third breakpoint on ia64 in the Second breakpoint's bundle): New.
+
 2009-09-03  Joseph Myers  <joseph@codesourcery.com>
 
 	* gdb.base/ending-run.exp: Restrict regular expression matching
